gitops/apps/garage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/part-of: garage
    ingress.kube-signal.io/public-gateway-access: "true"
