gitops/apps/garage/s3-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-s3-api
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-ingress
      sectionName: https-wildcard
  hostnames:
    - "garage-s3.${ARGOCD_ENV_base_domain}"
  rules:
    - backendRefs:
        - name: garage
          port: 3900
